@@ -24,11 +24,10 @@
  */
 package net.runelite.client.plugins.boosts;
 
-import com.google.common.collect.ImmutableSet;
 import com.google.inject.Provides;
 import java.util.ArrayList;
 import java.util.Arrays;
-import java.util.LinkedHashSet;
+import java.util.EnumSet;
 import java.util.List;
 import java.util.Set;
 import javax.inject.Inject;
@@ -62,20 +61,22 @@ import org.pf4j.Extension;
 )
 public class BoostsPlugin extends Plugin
 {
-	private static final Set<Skill> BOOSTABLE_COMBAT_SKILLS = ImmutableSet.of(
+	private static final Set<Skill> BOOSTABLE_COMBAT_SKILLS = Set.of(
 		Skill.ATTACK,
 		Skill.STRENGTH,
 		Skill.DEFENCE,
 		Skill.RANGED,
 		Skill.MAGIC);
 
-	private static final Set<Skill> BOOSTABLE_NON_COMBAT_SKILLS = ImmutableSet.of(
+	private static final Set<Skill> BOOSTABLE_NON_COMBAT_SKILLS = Set.of(
 		Skill.MINING, Skill.AGILITY, Skill.SMITHING, Skill.HERBLORE, Skill.FISHING, Skill.THIEVING,
 		Skill.COOKING, Skill.CRAFTING, Skill.FIREMAKING, Skill.FLETCHING, Skill.WOODCUTTING, Skill.RUNECRAFT,
 		Skill.SLAYER, Skill.FARMING, Skill.CONSTRUCTION, Skill.HUNTER);
 
 	@Getter
-	private final Set<Skill> shownSkills = new LinkedHashSet<>();
+	private final Set<Skill> skillsToDisplay = EnumSet.noneOf(Skill.class);
+
+	private final Set<Skill> shownSkills = EnumSet.noneOf(Skill.class);
 	private final int[] lastSkillLevels = new int[Skill.values().length - 1];
 	private final List<String> boostedSkillsChanged = new ArrayList<>();
 
@@ -122,7 +123,6 @@ public class BoostsPlugin extends Plugin
 		overlayManager.add(boostsOverlay);
 		overlayManager.add(combatIconsOverlay);
 		updateShownSkills();
-		updateBoostedStats();
 		Arrays.fill(lastSkillLevels, -1);
 
 		// Add infoboxes for everything at startup and then determine inside if it will be rendered
@@ -149,6 +149,7 @@ public class BoostsPlugin extends Plugin
 		lastChangeUp = -1;
 		isChangedUp = false;
 		isChangedDown = false;
+		skillsToDisplay.clear();
 	}
 
 	@Subscribe
@@ -327,6 +328,7 @@ public class BoostsPlugin extends Plugin
 				shownSkills.addAll(BOOSTABLE_NON_COMBAT_SKILLS);
 				break;
 		}
+		updateBoostedStats();
 	}
 
 	private void updateBoostedStats()
@@ -334,11 +336,12 @@ public class BoostsPlugin extends Plugin
 		// Reset is boosted
 		isChangedDown = false;
 		isChangedUp = false;
+		skillsToDisplay.clear();
 
 		// Check if we are still boosted
 		for (final Skill skill : Skill.values())
 		{
-			if (!BOOSTABLE_COMBAT_SKILLS.contains(skill) && !BOOSTABLE_NON_COMBAT_SKILLS.contains(skill))
+			if (!shownSkills.contains(skill))
 			{
 				continue;
 			}
@@ -353,6 +356,11 @@ public class BoostsPlugin extends Plugin
 			else if (boosted < base)
 			{
 				isChangedDown = true;
+			}
+
+			if (boosted != base)
+			{
+				skillsToDisplay.add(skill);
 			}
 		}
 	}
