@@ -24,9 +24,6 @@
  */
 package net.runelite.client.plugins.itemstats;
 
-import com.google.common.collect.ImmutableList;
-import com.google.common.collect.ImmutableMap;
-import com.google.common.collect.ImmutableSet;
 import com.google.inject.Binder;
 import com.google.inject.Inject;
 import com.google.inject.Provides;
@@ -38,7 +35,6 @@ import net.runelite.api.Client;
 import net.runelite.api.Constants;
 import net.runelite.api.FontID;
 import net.runelite.api.InventoryID;
-import net.runelite.api.Item;
 import net.runelite.api.ItemContainer;
 import net.runelite.api.ItemID;
 import net.runelite.api.ScriptID;
@@ -265,7 +261,7 @@ public class ItemStatPlugin extends Plugin
 
 		// STYLE BONUSES
 
-		final Set<String> stats = ImmutableSet.of(
+		final Set<String> stats = Set.of(
 			"Stab",
 			"Slash",
 			"Crush",
@@ -273,7 +269,7 @@ public class ItemStatPlugin extends Plugin
 			"Ranged"
 		);
 
-		final List<Integer> attackStats = ImmutableList.of(
+		final List<Integer> attackStats = List.of(
 			equipmentStats.getAstab(),
 			equipmentStats.getAslash(),
 			equipmentStats.getAcrush(),
@@ -281,7 +277,7 @@ public class ItemStatPlugin extends Plugin
 			equipmentStats.getArange()
 		);
 
-		final List<Integer> defenceStats = ImmutableList.of(
+		final List<Integer> defenceStats = List.of(
 			equipmentStats.getDstab(),
 			equipmentStats.getDslash(),
 			equipmentStats.getDcrush(),
@@ -316,7 +312,7 @@ public class ItemStatPlugin extends Plugin
 
 		yPos += TEXT_HEIGHT + 8;
 
-		final Map<String, Integer> miscStats = ImmutableMap.of(
+		final Map<String, Integer> miscStats = Map.of(
 			"Strength", equipmentStats.getStr(),
 			"Ranged Strength", equipmentStats.getRstr(),
 			"Magic Damage", equipmentStats.getMdmg(),
@@ -352,7 +348,7 @@ public class ItemStatPlugin extends Plugin
 	}
 
 	private static Widget createText(Widget parent, String text, int fontId, int textColor,
-										int x, int y, int width, int height)
+									int x, int y, int width, int height)
 	{
 		final Widget widget = parent.createChild(-1, WidgetType.TEXT);
 		widget.setText(text);
@@ -408,15 +404,7 @@ public class ItemStatPlugin extends Plugin
 			return 0;
 		}
 
-		for (final Item item : inventory.getItems())
-		{
-			if (item.getId() == ItemID.COINS_995)
-			{
-				return item.getQuantity();
-			}
-		}
-
-		return 0;
+		return inventory.count(ItemID.COINS_995);
 	}
 
 	private Widget getInventoryContainer()
