@@ -30,7 +30,6 @@ package net.runelite.client.plugins.menuentryswapper;
 
 import com.google.common.base.Splitter;
 import com.google.common.base.Strings;
-import com.google.common.collect.ImmutableSet;
 import com.google.inject.Provides;
 import java.util.ArrayList;
 import java.util.Arrays;
@@ -71,6 +70,7 @@ import net.runelite.client.events.ConfigChanged;
 import net.runelite.client.input.KeyManager;
 import net.runelite.client.menus.AbstractComparableEntry;
 import net.runelite.client.menus.BankComparableEntry;
+import net.runelite.client.menus.BaseComparableEntry;
 import static net.runelite.client.menus.ComparableEntries.newBankComparableEntry;
 import static net.runelite.client.menus.ComparableEntries.newBaseComparableEntry;
 import net.runelite.client.menus.InventoryComparableEntry;
@@ -102,7 +102,12 @@ public class MenuEntrySwapperPlugin extends Plugin
 	private static final Object HOTKEY_CHECK = new Object();
 	private static final Object CONTROL_CHECK = new Object();
 	private static final int PURO_PURO_REGION_ID = 10307;
-	private static final Set<MenuOpcode> NPC_MENU_TYPES = ImmutableSet.of(
+	private static final BankComparableEntry POUCH = new BankComparableEntry("fill", "pouch", false);
+	private static final BaseComparableEntry EMPTY_SMALL = newBaseComparableEntry("empty", "small pouch");
+	private static final BaseComparableEntry EMPTY_MEDIUM = newBaseComparableEntry("empty", "medium pouch");
+	private static final BaseComparableEntry EMPTY_LARGE = newBaseComparableEntry("empty", "large pouch");
+	private static final BaseComparableEntry EMPTY_GIANT = newBaseComparableEntry("empty", "giant pouch");
+	private static final Set<MenuOpcode> NPC_MENU_TYPES = Set.of(
 		MenuOpcode.NPC_FIRST_OPTION, MenuOpcode.NPC_SECOND_OPTION, MenuOpcode.NPC_THIRD_OPTION,
 		MenuOpcode.NPC_FOURTH_OPTION, MenuOpcode.NPC_FIFTH_OPTION, MenuOpcode.EXAMINE_NPC
 	);
@@ -358,11 +363,11 @@ public class MenuEntrySwapperPlugin extends Plugin
 				{
 					continue;
 				}
-				if (config.hideDestroyCoalbag() && entry.getTarget().contains("Coal bag"))
+				if (config.hideDestroyCoalbag() && (entry.getTarget().contains("Coal bag") || entry.getTarget().contains("Open coal sack")))
 				{
 					continue;
 				}
-				if (config.hideDestroyHerbsack() && entry.getTarget().contains("Herb sack"))
+				if (config.hideDestroyHerbsack() && (entry.getTarget().contains("Herb sack") || entry.getTarget().contains("Open herb sack")))
 				{
 					continue;
 				}
@@ -374,7 +379,7 @@ public class MenuEntrySwapperPlugin extends Plugin
 				{
 					continue;
 				}
-				if (config.hideDestroyGembag() && (entry.getTarget().contains("Gem bag") || entry.getTarget().contains("open gem bag")))
+				if (config.hideDestroyGembag() && (entry.getTarget().contains("Gem bag") || entry.getTarget().contains("Open gem bag")))
 				{
 					continue;
 				}
@@ -872,6 +877,7 @@ public class MenuEntrySwapperPlugin extends Plugin
 		{
 			menuManager.addPriorityEntry("Reset", "Shaking box");
 			menuManager.addPriorityEntry("Lay", "Box trap");
+			menuManager.addPriorityEntry("Reset", "Box trap");
 			menuManager.addPriorityEntry("Activate", "Box trap");
 		}
 
@@ -1066,6 +1072,15 @@ public class MenuEntrySwapperPlugin extends Plugin
 			menuManager.addPriorityEntry(new GrimyHerbComparableEntry(config.swapGrimyHerbMode(), client));
 		}
 
+		if (config.swapEssPouch())
+		{
+			menuManager.addPriorityEntry(POUCH).setPriority(100);
+			menuManager.addPriorityEntry(EMPTY_SMALL).setPriority(10);
+			menuManager.addPriorityEntry(EMPTY_MEDIUM).setPriority(10);
+			menuManager.addPriorityEntry(EMPTY_LARGE).setPriority(10);
+			menuManager.addPriorityEntry(EMPTY_GIANT).setPriority(10);
+		}
+
 		if (config.swapJewelleryBox())
 		{
 			for (String jewellerybox : jewelleryBox)
@@ -1227,6 +1242,11 @@ public class MenuEntrySwapperPlugin extends Plugin
 		menuManager.removeSwap("Bury", "bone", "Use");
 		menuManager.removeSwap("Wield", "salamander", "Release");
 		menuManager.removeSwap("Wield", "Swamp lizard", "Release");
+		menuManager.removePriorityEntry(POUCH);
+		menuManager.removePriorityEntry(EMPTY_SMALL);
+		menuManager.removePriorityEntry(EMPTY_MEDIUM);
+		menuManager.removePriorityEntry(EMPTY_LARGE);
+		menuManager.removePriorityEntry(EMPTY_GIANT);
 		for (String jewellerybox : jewelleryBox)
 		{
 			menuManager.removePriorityEntry(jewellerybox, "basic jewellery box");
@@ -1397,31 +1417,31 @@ public class MenuEntrySwapperPlugin extends Plugin
 	{
 		if (config.bankWieldItem())
 		{
-		menuManager.removePriorityEntry(new BankComparableEntry("wield", "", false));
+			menuManager.removePriorityEntry(new BankComparableEntry("wield", "", false));
 		}
 		if (config.bankWearItem())
 		{
-		menuManager.removePriorityEntry(new BankComparableEntry("wear", "", false));
+			menuManager.removePriorityEntry(new BankComparableEntry("wear", "", false));
 		}
 		if (config.bankEatItem())
 		{
-		menuManager.removePriorityEntry(new BankComparableEntry("eat", "", false));
+			menuManager.removePriorityEntry(new BankComparableEntry("eat", "", false));
 		}
 		if (config.bankDrinkItem())
 		{
-		menuManager.removePriorityEntry(new BankComparableEntry("drink", "", false));
+			menuManager.removePriorityEntry(new BankComparableEntry("drink", "", false));
 		}
 		if (config.bankEquipItem())
 		{
-		menuManager.removePriorityEntry(new BankComparableEntry("equip", "", false));
+			menuManager.removePriorityEntry(new BankComparableEntry("equip", "", false));
 		}
 		if (config.bankInvigorateItem())
 		{
-		menuManager.removePriorityEntry(new BankComparableEntry("invigorate", "", false));
+			menuManager.removePriorityEntry(new BankComparableEntry("invigorate", "", false));
 		}
 		if (config.swapClimbUpDown())
 		{
-		menuManager.removePriorityEntry("climb-up");
+			menuManager.removePriorityEntry("climb-up");
 		}
 
 		if (config.swapNpcContact())
