@@ -1,6 +1,7 @@
 /*
  * Copyright (c) 2019, Anthony Chen <https://github.com/achencoms>
  * Copyright (c) 2019, Adam <Adam@sigterm.info>
+ * Copyright (c) 2020, Sean Dewar <https://github.com/seandewar>
  * All rights reserved.
  *
  * Redistribution and use in source and binary forms, with or without
@@ -25,7 +26,6 @@
  */
 package net.runelite.client.plugins.music;
 
-import com.google.common.collect.ImmutableSet;
 import com.google.inject.Provides;
 import java.util.Arrays;
 import java.util.Collection;
@@ -50,8 +50,10 @@ import net.runelite.api.SpriteID;
 import net.runelite.api.VarClientInt;
 import net.runelite.api.VarPlayer;
 import net.runelite.api.events.AreaSoundEffectPlayed;
+import net.runelite.api.events.BeforeRender;
 import net.runelite.api.events.GameStateChanged;
 import net.runelite.api.events.ScriptCallbackEvent;
+import net.runelite.api.events.SoundEffectPlayed;
 import net.runelite.api.events.VarClientIntChanged;
 import net.runelite.api.events.VolumeChanged;
 import net.runelite.api.events.WidgetLoaded;
@@ -71,6 +73,8 @@ import net.runelite.client.game.chatbox.ChatboxTextInput;
 import net.runelite.client.plugins.Plugin;
 import net.runelite.client.plugins.PluginDescriptor;
 import net.runelite.client.plugins.PluginType;
+import net.runelite.client.ui.overlay.tooltip.Tooltip;
+import net.runelite.client.ui.overlay.tooltip.TooltipManager;
 import org.pf4j.Extension;
 
 @Extension
@@ -82,8 +86,38 @@ import org.pf4j.Extension;
 )
 public class MusicPlugin extends Plugin
 {
-	private static final Set<Integer> SOURCELESS_PLAYER_SOUNDS = ImmutableSet.of(
+	private static final Set<Integer> SOURCELESS_PLAYER_SOUNDS = Set.of(
 		SoundEffectID.TELEPORT_VWOOP
+	);
+
+	private static final Set<Integer> PRAYER_SOUNDS = Set.of(
+		SoundEffectID.PRAYER_ACTIVATE_THICK_SKIN,
+		SoundEffectID.PRAYER_ACTIVATE_BURST_OF_STRENGTH,
+		SoundEffectID.PRAYER_ACTIVATE_CLARITY_OF_THOUGHT,
+		SoundEffectID.PRAYER_ACTIVATE_SHARP_EYE_RIGOUR,
+		SoundEffectID.PRAYER_ACTIVATE_MYSTIC_WILL_AUGURY,
+		SoundEffectID.PRAYER_ACTIVATE_ROCK_SKIN,
+		SoundEffectID.PRAYER_ACTIVATE_SUPERHUMAN_STRENGTH,
+		SoundEffectID.PRAYER_ACTIVATE_IMPROVED_REFLEXES,
+		SoundEffectID.PRAYER_ACTIVATE_RAPID_RESTORE_PRESERVE,
+		SoundEffectID.PRAYER_ACTIVATE_RAPID_HEAL,
+		SoundEffectID.PRAYER_ACTIVATE_PROTECT_ITEM,
+		SoundEffectID.PRAYER_ACTIVATE_HAWK_EYE,
+		SoundEffectID.PRAYER_ACTIVATE_MYSTIC_LORE,
+		SoundEffectID.PRAYER_ACTIVATE_STEEL_SKIN,
+		SoundEffectID.PRAYER_ACTIVATE_ULTIMATE_STRENGTH,
+		SoundEffectID.PRAYER_ACTIVATE_INCREDIBLE_REFLEXES,
+		SoundEffectID.PRAYER_ACTIVATE_PROTECT_FROM_MAGIC,
+		SoundEffectID.PRAYER_ACTIVATE_PROTECT_FROM_MISSILES,
+		SoundEffectID.PRAYER_ACTIVATE_PROTECT_FROM_MELEE,
+		SoundEffectID.PRAYER_ACTIVATE_EAGLE_EYE,
+		SoundEffectID.PRAYER_ACTIVATE_MYSTIC_MIGHT,
+		SoundEffectID.PRAYER_ACTIVATE_RETRIBUTION,
+		SoundEffectID.PRAYER_ACTIVATE_REDEMPTION,
+		SoundEffectID.PRAYER_ACTIVATE_SMITE,
+		SoundEffectID.PRAYER_ACTIVATE_CHIVALRY,
+		SoundEffectID.PRAYER_ACTIVATE_PIETY,
+		SoundEffectID.PRAYER_DEACTIVE_VWOOP
 	);
 
 	@Inject
@@ -98,6 +132,9 @@ public class MusicPlugin extends Plugin
 	@Inject
 	private ChatboxPanelManager chatboxPanelManager;
 
+	@Inject
+	private TooltipManager tooltipManager;
+
 	private ChatboxTextInput searchInput;
 
 	private Widget musicSearchButton;
@@ -106,6 +143,8 @@ public class MusicPlugin extends Plugin
 	private Collection<Widget> tracks;
 
 	private MusicState currentMusicFilter = MusicState.ALL;
+
+	private MusicSlider hoveredSlider;
 
 	@Override
 	protected void startUp()
@@ -128,6 +167,7 @@ public class MusicPlugin extends Plugin
 		}
 
 		tracks = null;
+		hoveredSlider = null;
 
 		clientThread.invoke(this::teardownMusicOptions);
 	}
@@ -286,6 +326,7 @@ public class MusicPlugin extends Plugin
 		musicSearchButton.setOnOpListener((JavaScriptCallback) e -> closeSearch());
 		searchInput = chatboxPanelManager.openTextInput("Search music list")
 			.onChanged(s -> clientThread.invokeLater(() -> updateFilter(s.trim())))
+			.onDone(s -> false)
 			.onClose(() ->
 			{
 				clientThread.invokeLater(() -> updateFilter(""));
@@ -381,10 +422,11 @@ public class MusicPlugin extends Plugin
 	@Getter
 	private enum MusicSlider
 	{
-		MUSIC(WidgetInfo.OPTIONS_MUSIC_SLIDER, VarPlayer.MUSIC_VOLUME, MusicConfig::getMusicVolume, MusicConfig::setMusicVolume, 255),
-		AREA(WidgetInfo.OPTIONS_AREA_SOUND_SLIDER, VarPlayer.AREA_EFFECT_VOLUME, MusicConfig::getAreaSoundEffectVolume, MusicConfig::setAreaSoundEffectVolume, 127),
-		EFFECT(WidgetInfo.OPTIONS_SOUND_EFFECT_SLIDER, VarPlayer.SOUND_EFFECT_VOLUME, MusicConfig::getSoundEffectVolume, MusicConfig::setSoundEffectVolume, 127);
+		MUSIC("Music", WidgetInfo.OPTIONS_MUSIC_SLIDER, VarPlayer.MUSIC_VOLUME, MusicConfig::getMusicVolume, MusicConfig::setMusicVolume, 255),
+		AREA("Area Sounds", WidgetInfo.OPTIONS_AREA_SOUND_SLIDER, VarPlayer.AREA_EFFECT_VOLUME, MusicConfig::getAreaSoundEffectVolume, MusicConfig::setAreaSoundEffectVolume, 127),
+		EFFECT("Sound Effects", WidgetInfo.OPTIONS_SOUND_EFFECT_SLIDER, VarPlayer.SOUND_EFFECT_VOLUME, MusicConfig::getSoundEffectVolume, MusicConfig::setSoundEffectVolume, 127);
 
+		private final String name;
 		private final WidgetInfo widgetID;
 		private final VarPlayer var;
 		private final ToIntFunction<MusicConfig> getter;
@@ -407,6 +449,19 @@ public class MusicPlugin extends Plugin
 		private int getWidth()
 		{
 			return getTrack().getWidth() - (PADDING * 2) - handle.getWidth();
+		}
+
+
+		private int getValue(final MusicConfig config, final Client client)
+		{
+			int value = getter.applyAsInt(config) - 1;
+			if (value <= -1)
+			{
+				// Use the vanilla value
+				value = ((4 - client.getVar(var)) * max) / 4;
+			}
+
+			return value;
 		}
 	}
 
@@ -515,6 +570,10 @@ public class MusicPlugin extends Plugin
 				handle.setOriginalWidth(16);
 				handle.setOriginalHeight(16);
 				handle.setClickMask(WidgetConfig.DRAG);
+				handle.revalidate();
+
+				handle.setOnMouseRepeatListener((JavaScriptCallback) ev -> hoveredSlider = slider);
+				handle.setHasListener(true);
 
 				JavaScriptCallback move = ev ->
 				{
@@ -542,17 +601,25 @@ public class MusicPlugin extends Plugin
 				client.runScript(ScriptID.OPTIONS_ALLSOUNDS, -1, init[2], init[3], init[4], init[5], init[6]);
 			}
 
-			int value = slider.getGetter().applyAsInt(musicConfig) - 1;
-			if (value <= -1)
-			{
-				// Use the vanilla value
-				value = ((4 - client.getVar(slider.getVar())) * slider.getMax()) / 4;
-			}
-
-			int newX = ((value * slider.getWidth()) / slider.getMax()) + slider.getX();
+			final int value = slider.getValue(musicConfig, client);
+			final int newX = ((value * slider.getWidth()) / slider.getMax()) + slider.getX();
 			slider.getHandle().setOriginalX(newX);
 			slider.getHandle().setOriginalY(slider.getTrack().getOriginalY());
 			slider.getHandle().revalidate();
+		}
+	}
+
+	@Subscribe
+	public void onBeforeRender(final BeforeRender event)
+	{
+		// Tooltips are auto-cleared before each render frame; create a new updated one for this frame
+		if (hoveredSlider != null)
+		{
+			final int value = hoveredSlider.getValue(musicConfig, client);
+			final int percent = (int) Math.round((value * 100.0 / hoveredSlider.getMax()));
+
+			tooltipManager.add(new Tooltip(hoveredSlider.getName() + ": " + percent + "%"));
+			hoveredSlider = null;
 		}
 	}
 
@@ -592,6 +659,16 @@ public class MusicPlugin extends Plugin
 			&& musicConfig.muteEnvironmentAreaSounds())
 		{
 			areaSoundEffectPlayed.consume();
+		}
+	}
+
+	@Subscribe
+	public void onSoundEffectPlayed(SoundEffectPlayed soundEffectPlayed)
+	{
+		if (musicConfig.mutePrayerSounds()
+			&& PRAYER_SOUNDS.contains(soundEffectPlayed.getSoundId()))
+		{
+			soundEffectPlayed.consume();
 		}
 	}
 }
